refactor: UrlListToStringConverter