@@ -1,5 +1,6 @@
 package com.startingblue.fourtooncookie.converter;
 
+import com.startingblue.fourtooncookie.converter.exception.ConversionException;
 import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
 import org.springframework.stereotype.Component;
@@ -14,14 +15,21 @@ import java.util.stream.Collectors;
 @Component
 public class UrlListToStringConverter implements AttributeConverter<List<URL>, String> {
 
+    private static final String EMPTY_LIST_STRING = "";
+
     @Override
     public String convertToDatabaseColumn(List<URL> attribute) {
         if (isAttributeEmpty(attribute)) {
-            return "";
+            return EMPTY_LIST_STRING;
         }
-        return attribute.stream()
-                .map(String::valueOf)
-                .collect(Collectors.joining(","));
+
+        try {
+            return attribute.stream()
+                    .map(String::valueOf)
+                    .collect(Collectors.joining(","));
+        } catch (Exception e) {
+            throw new ConversionException("Error converting List<URL> to String", e);
+        }
     }
 
     @Override
@@ -29,15 +37,20 @@ public class UrlListToStringConverter implements AttributeConverter<List<URL>, S
         if (isDBColumnEmpty(dbData)) {
             return List.of();
         }
-        return Arrays.stream(dbData.split(","))
-                .map(urlString -> {
-                    try {
-                        return new URL(urlString);
-                    } catch (MalformedURLException e) {
-                        throw new RuntimeException("Malformed URL: " + urlString, e);
-                    }
-                })
-                .toList();
+
+        try {
+            return Arrays.stream(dbData.split(","))
+                    .map(urlString -> {
+                        try {
+                            return new URL(urlString);
+                        } catch (MalformedURLException e) {
+                            throw new ConversionException("Malformed URL: " + urlString, e);
+                        }
+                    })
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            throw new ConversionException("Error converting String to List<URL>", e);
+        }
     }
 
     private static boolean isAttributeEmpty(List<URL> attribute) {
